MDEV-29628 Memory leak after CREATE OR REPLACE with foreign key

MDEV-28933 added a condition to avoid keeping cached foreign keys when
renaming into temporary table. Such foreign keys must be freed.